--- a/confs/v0.0.0_sl_pts.conf
+++ b/confs/v0.0.0_sl_pts.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/CASE_NAME
+    base_exp_dir = /geo_neus_results/CASE_NAME/subsystem/exp
     recording = [
         ./,
         ./models
@@ -7,7 +7,7 @@ general {
 }
 
 dataset {
-    data_dir = /mnt/D/hust_fu/Data/CASE_NAME
+    data_dir = /geo_neus_results/CASE_NAME/subsystem/data
     render_cameras_name = cameras.npz
     object_cameras_name = cameras.npz
     n_views = 20
