Add ROI ray sampling

--- a/confs/v0.0.0_sl_pts.conf
+++ b/confs/v0.0.0_sl_pts.conf
@@ -10,7 +10,7 @@ dataset {
     data_dir = /geo_neus_results/CASE_NAME/subsystem/data
     render_cameras_name = cameras.npz
     object_cameras_name = cameras.npz
-    n_views = 20
+    sample_roi_prob = 0.8
 }
 
 train {
@@ -28,6 +28,7 @@ train {
     val_freq = 2500
     val_mesh_freq = 5000
     report_freq = 100
+    val_img_i = 53
 
     igr_weight = 0.1
     mask_weight = 0.0
